# ArtAnalysis

./: CMakeLists.txt  README.md
CrvInference/: CMakeLists.txt
CrvInference/data/: CrvCosmic_v1.0.0.ubj
CrvInference/fcl/: TestCrvInference.fcl  prolog.fcl
CrvInference/src/: CrvInferenceAna_module.cc  CrvInference_module.cc  SConscript
TrkDiag/: CMakeLists.txt
TrkDiag/data/: TrackPID_v1.onnx  TrkQual_ANN1_v2.onnx  TrkQual_BDT1_v2.0.ubj
TrkDiag/scripts/: convert_trackpid_to_onnx.py
TrkDiag/src/: SConscript  TrackPID_module.cc  TrackQuality_module.cc
